--- a/jpashop/src/main/resources/application.properties
+++ b/jpashop/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jpabook?autoReconnect=true
+spring.output.ansi.enabled=always
+spring.datasource.url=jdbc:mysql://localhost:3306/jpabook?serverTimezone=UTC&useSSL=false&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=mysql
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
