--- a/jpashop/src/main/resources/application.properties
+++ b/jpashop/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.output.ansi.enabled=always
-spring.datasource.url=jdbc:mysql://localhost:3306/jpabook?serverTimezone=UTC&useSSL=false&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/jpabook?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
